Вторая страничка мобильного меню

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section section--no-padding">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="portfolio-buttons list">
@@ -303,7 +303,7 @@
         </div>
         <div class="footer__section social">
           <h3 class="footer__title">Присоединяйтесь</h3>
-          <ul class="socials list">
+          <ul class="socials list list--footer">
             <li class="socials__link-footer">
               <a href="" class="socials__footer-items">
                 <svg class="socials__icon" width="20" height="20">
