--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section class="section section--no-padding">
+      <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="portfolio-buttons list">
@@ -280,59 +280,62 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="footer__section">
-          <a href="./index.html" class="logo"
-            >Web<span class="logo__bottom--color">Studio</span></a
-          >
-          <address>
-            <span class="street">г. Киев, пр-т Леси Украинки, 26</span>
-            <ul class="list">
-              <li class="list__item">
-                <a href="mailto:info@devstudio.com" class="list__contact link"
-                  >info@devstudio.com</a
-                >
+      <div class="container container--footer">
+        <div class="footer__tablet">
+          <div class="footer__section">
+            <a href="./index.html" class="logo"
+              >Web<span class="logo__bottom--color">Studio</span></a
+            >
+
+            <address>
+              <span class="street">г. Киев, пр-т Леси Украинки, 26</span>
+              <ul class="list">
+                <li class="list__item">
+                  <a href="mailto:info@devstudio.com" class="list__contact link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="list__item">
+                  <a href="tel:+380961111111" class="list__contact link"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer__section social">
+            <h3 class="footer__title">Присоединяйтесь</h3>
+            <ul class="socials list list--footer">
+              <li class="socials__link-footer">
+                <a href="" class="socials__footer-items">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="list__item">
-                <a href="tel:+380961111111" class="list__contact link"
-                  >+38 096 111 11 11</a
-                >
+              <li class="socials__link-footer">
+                <a href="" class="socials__footer-items">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__link-footer">
+                <a href="" class="socials__footer-items">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__link-footer">
+                <a href="" class="socials__footer-items">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer__section social">
-          <h3 class="footer__title">Присоединяйтесь</h3>
-          <ul class="socials list list--footer">
-            <li class="socials__link-footer">
-              <a href="" class="socials__footer-items">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__link-footer">
-              <a href="" class="socials__footer-items">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__link-footer">
-              <a href="" class="socials__footer-items">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__link-footer">
-              <a href="" class="socials__footer-items">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="subscription-section">
           <h3 class="footer__title">подпишитесь на рассылку</h3>
