--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,36 @@
           <a href="./index.html" class="logo"
             >Web<span class="logo__header--black">Studio</span></a
           >
+
+          <button
+            type="button"
+            class="burger-button"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+            data-menu-button
+          >
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-burger-close"
+                href="./images/burger-icons.svg#icon-burger-close"
+              ></use>
+              <use
+                class="icon-burger-menu"
+                href="./images/burger-icons.svg#icon-burger-menu"
+              ></use>
+            </svg>
+          </button>
+
+          <div class="mobile-menu" id="mobile-menu" data-menu>
+            <div class="navigation"></div>
+            <div class="contacts"></div>
+            <div class="social"></div>
+          </div>
+
           <ul class="site-nav list">
             <li class="site-nav__item">
               <a href="./index.html" class="site-nav__link link">Студия</a>
@@ -357,5 +387,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
