--- a/index.html
+++ b/index.html
@@ -306,11 +306,16 @@
           <ul class="directions list">
             <li class="directions__item">
               <div class="directions__thumb">
-                <img
-                  src="./images/img.jpeg"
-                  alt="Программирование"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img.jpeg 1x, ./images/img2x.jpeg 2x"
+                  />
+                  <img
+                    src="./images/img.jpeg"
+                    alt="Программирование"
+                    width="370"
+                  />
+                </picture>
                 <div class="directions__description">
                   <p>Десктопные приложения</p>
                 </div>
@@ -318,11 +323,16 @@
             </li>
             <li class="directions__item">
               <div class="directions__thumb">
-                <img
-                  src="./images/img2.jpeg"
-                  alt="Мобильные приложения"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="./images/img2.jpeg 1x, ./images/img2-2x.jpeg 2x"
+                  />
+                  <img
+                    src="./images/img2.jpeg"
+                    alt="Мобильные приложения"
+                    width="370"
+                  />
+                </picture>
                 <div class="directions__description">
                   <p>Мобильные приложения</p>
                 </div>
@@ -330,7 +340,12 @@
             </li>
             <li class="directions__item">
               <div class="directions__thumb">
-                <img src="./images/img3.jpeg" alt="Дизайн" width="370" />
+                <picture>
+                  <source
+                    srcset="./images/img3.jpeg 1x, ./images/img3-2x.jpeg 2x"
+                  />
+                  <img src="./images/img3.jpeg" alt="Дизайн" width="370" />
+                </picture>
                 <div class="directions__description">
                   <p>Дизайнерские решения</p>
                 </div>
@@ -344,12 +359,17 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="members list">
             <li class="members__item">
-              <img
-                src="./images/img4.jpeg"
-                alt="Игорь Демьяненко"
-                width="270"
-                class="members__photo"
-              />
+              <picture>
+                <source
+                  srcset="./images/img4.jpeg 1x, ./images/img4-2x.jpeg 2x"
+                />
+                <img
+                  src="./images/img4.jpeg"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                  class="members__photo"
+                />
+              </picture>
               <div class="members__description">
                 <h3 class="members__name">Игорь Демьяненко</h3>
                 <p class="members__work-position">Product Designer</p>
@@ -401,12 +421,17 @@
               </div>
             </li>
             <li class="members__item">
-              <img
-                src="./images/img5.jpeg"
-                alt="Ольга Репина"
-                width="270"
-                class="members__photo"
-              />
+              <picture>
+                <source
+                  srcset="./images/img5.jpeg 1x, ./images/img5-2x.jpeg 2x"
+                />
+                <img
+                  src="./images/img5.jpeg"
+                  alt="Ольга Репина"
+                  width="270"
+                  class="members__photo"
+                />
+              </picture>
               <div class="members__description">
                 <h3 class="members__name">Ольга Репина</h3>
                 <p class="members__work-position">Frontend Developer</p>
@@ -451,12 +476,17 @@
               </div>
             </li>
             <li class="members__item">
-              <img
-                src="./images/img6.jpeg"
-                alt="Николай Тарасов"
-                width="270"
-                class="members__photo"
-              />
+              <picture>
+                <source
+                  srcset="./images/img6.jpeg 1x, ./images/img6-2x.jpeg 2x"
+                />
+                <img
+                  src="./images/img6.jpeg"
+                  alt="Николай Тарасов"
+                  width="270"
+                  class="members__photo"
+                />
+              </picture>
               <div class="members__description">
                 <h3 class="members__name">Николай Тарасов</h3>
                 <p class="members__work-position">Marketing</p>
@@ -501,12 +531,17 @@
               </div>
             </li>
             <li class="members__item">
-              <img
-                src="./images/img7.jpeg"
-                alt="Михаил Ермаков"
-                width="270"
-                class="members__photo"
-              />
+              <picture>
+                <source
+                  srcset="./images/img7.jpeg 1x, ./images/img7-2x.jpeg 2x"
+                />
+                <img
+                  src="./images/img7.jpeg"
+                  alt="Михаил Ермаков"
+                  width="270"
+                  class="members__photo"
+                />
+              </picture>
               <div class="members__description">
                 <h3 class="members__name">Михаил Ермаков</h3>
                 <p class="members__work-position">UI Designer</p>
